--- a/project-one.html
+++ b/project-one.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="project-one.css" />
   </head>
   <body>
     <body id="body">
@@ -17,7 +18,7 @@
         </ul>
       </nav>
 
-      <script src="scripts.js"></script>
+      <script src="project-one.js"></script>
     </body>
   </body>
 </html>
